Updated title, header & fixed widgetbar overflow bug

--- a/public/less/dashboard.less
+++ b/public/less/dashboard.less
@@ -136,13 +136,16 @@ aside {
 	-webkit-box-shadow: 0px 0px 5px #aaa;
 	section.widget_info {
 		float: left;
-		padding: 15px;
+		padding: 10px;
 		width: 170px;
+		height: 78px;
+		overflow: hidden;
 		background: transparent url('../img/widgetbar_border.png') no-repeat right center;
 		color: #ccc;
 		img {
 			float: left;
 			margin-right: 10px;
+			margin-top: 5px;
 			border: 2px solid #ccc;
 			.rounded(2px);
 		}
